# after-sales-agent-design

./: .env.example  .gitignore  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  pyrightconfig.json
.codex/plans/: refactor-a1-guard-runs-contract.md  refactor-a2-guard-projection-cas.md  refactor-a3-guard-tool-policy-isolation.md  refactor-b1-thin-hitl-plumbing.md  refactor-b2-thin-llm-service-plumbing.md  refactor-b3-thin-event-bus-bootstrap.md  refactor-b4-thin-fastapi-boundary.md  refactor-cd1-remove-deepseek-wrapper.md  refactor-cd2-adopt-sse-starlette.md  refactor-cd3-collapse-tool-executor-chain.md  refactoring-master-plan.md
docs/: ARCHITECTURE.md  LEARNING_GUIDE.md  agent_service_architecture_tutorial.md  agent_service架构.drawio  connect deepseek.md  docker_compose_project_connection_guide.md  中国智能体岗位需求与项目选型分析.md  手记全流程笔记-骨架版.md  手记全流程笔记.md
examples/: 01_runtime_demo.py  02_pydantic_validation_demo.py  03_asyncio_primer.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/api/: chat.ts
migrations/: env.py
migrations/versions/: 20260311_0001_init_core_tables.py  20260316_0002_add_llm_calls.py  20260422_000001_add_after_sales_mvp_tables.py  20260423_000002_add_tool_call_id_to_approval_records.py
scripts/: audit_doc_code_fences.py  audit_learning_docs.py  generate_agent_service_architecture_report.py  seed.py
src/after_sales/: __init__.py
src/after_sales/application/: ports.py
src/after_sales/domain/: __init__.py  entities.py
src/agent_core/: __init__.py  registry.py
src/agent_core/contracts/: __init__.py  agent_definition.py  run_events.py  run_state.py  tool_spec.py
src/agent_core/support/: __init__.py  json_payload.py  message_serialization.py  token_usage.py
src/agent_integrations/: __init__.py
src/agent_integrations/llm/: __init__.py
src/agent_integrations/mcp/: __init__.py  tool_provider.py
src/agent_orchestrator_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_runtime/: __init__.py  errors.py  logging_middleware.py  models.py  registry.py  runtime.py
src/agent_runtime/langchain/: __init__.py  approval_middleware.py  event_mapper.py  result_mapper.py  runtime.py  runtime_state_store.py  state.py  tool_adapter.py  transcript.py
src/agent_service/: __init__.py  config.py  main.py
src/agent_service/api/: __init__.py  auth.py  chat.py  deps.py  health.py  middleware.py
src/agent_service/contracts/: actions.py  capability.py  events.py  models.py  registry.py
src/agent_service/conversation/: __init__.py  approval.py  errors.py  events.py  graph.py  models.py  nodes.py  service.py  state.py
src/agent_service/db/: __init__.py  base.py  models.py  session.py
src/agent_service/llm/: __init__.py  bound_client.py  factory.py  payloads.py  prompts.py  service.py  tokens.py  types.py
src/agent_service/observability/: context.py
src/agent_service/repositories/: __init__.py  evaluations.py  llm_calls.py  messages.py  sessions.py  tool_calls.py  workflow_runs.py
src/agent_service/schemas/: __init__.py  chat.py  common.py
src/agent_service/services/: README.md  __init__.py  cache_service.py  chat_service.py  orchestrator_service.py  planner_service.py  runtime_service.py  stream_service.py
src/agent_service/tools/: __init__.py  catalog.py  inline.py  models.py
src/app_api/: __init__.py  bootstrap.py  container.py  deps.py  main.py  migrations.py  settings.py
src/app_api/cli/: doctor.py  migrate.py
src/app_api/composition/: __init__.py  after_sales_agent_factory.py  bootstrap.py  container.py
src/app_api/projectors/: __init__.py  after_sales_run_projector.py
src/app_api/routers/: after_sales_runs.py  (+4 more)
src/business_service/: __init__.py
tests/: agent_helpers.py  conftest.py  fake_chat_models.py  helpers.py  sample_tools.py  test_conversation_service.py  test_docs_and_examples.py  test_event_mapper.py  test_inline_tools.py  test_langchain_runtime.py  test_llm_service.py  test_mcp_registry.py  test_model_factory.py  test_orchestrator_service.py  test_result_mapper.py  test_runtime.py  test_settings.py
tests/integration/: __init__.py  helpers.py  test_app_api.py  test_chat_api.py  test_health_api.py  test_stream_api.py
tests/new_architecture/: helpers.py  test_app_api.py
(+41 files in other folders)
