[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-orchestrator-platform"
version = "0.1.0"
description = "Minimal agent runtime scaffold for the 12-week AI agent roadmap."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.9,<1",
    "mypy>=1.11,<2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
